// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Token value snapshots – dark mode > palette=default dark – token values match snapshot 1`] = `
{
  "--nc-accent-active": "#ede9fe",
  "--nc-accent-default": "#8b5cf6",
  "--nc-accent-hover": "#c4b5fd",
  "--nc-accent-subtle": "#4f46e533",
  "--nc-border-default": "#6b6b88",
  "--nc-border-focus": "#8b5cf6",
  "--nc-border-interactive": "#9898b8",
  "--nc-content-disabled": "#6b6b88",
  "--nc-content-on-accent": "#0d0d1a",
  "--nc-content-on-danger": "#0d0d1a",
  "--nc-content-primary": "#f8f8fc",
  "--nc-content-secondary": "#c8c8dc",
  "--nc-danger-default": "#f87171",
  "--nc-danger-hover": "#fecaca",
  "--nc-danger-subtle": "#dc262633",
  "--nc-font-family-body": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-heading": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-mono": "'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', Menlo, Consolas, monospace",
  "--nc-font-size-2xl": "2rem",
  "--nc-font-size-lg": "1.25rem",
  "--nc-font-size-md": "1rem",
  "--nc-font-size-sm": "0.875rem",
  "--nc-font-size-xl": "1.563rem",
  "--nc-font-size-xs": "0.75rem",
  "--nc-radius-full": "9999px",
  "--nc-radius-lg": "0.75rem",
  "--nc-radius-md": "0.5rem",
  "--nc-radius-sm": "0.25rem",
  "--nc-shadow-md": "0 4px 6px -1px rgba(0,0,0,0.40), 0 2px 4px -2px rgba(0,0,0,0.40)",
  "--nc-shadow-sm": "0 1px 3px 0 rgba(0,0,0,0.40), 0 1px 2px -1px rgba(0,0,0,0.40)",
  "--nc-space-2xl": "3rem",
  "--nc-space-3xl": "4rem",
  "--nc-space-lg": "1.5rem",
  "--nc-space-md": "1rem",
  "--nc-space-sm": "0.5rem",
  "--nc-space-xl": "2rem",
  "--nc-space-xs": "0.25rem",
  "--nc-success-default": "#4ade80",
  "--nc-success-subtle": "#16a34a33",
  "--nc-surface-background": "#1a1a2e",
  "--nc-surface-card": "#3d3d5c",
  "--nc-surface-overlay": "rgba(0,0,0,0.60)",
  "--nc-surface-subtle": "#3d3d5c",
}
`;

exports[`Token value snapshots – dark mode > palette=forest dark – token values match snapshot 1`] = `
{
  "--nc-accent-active": "#dcfce7",
  "--nc-accent-default": "#34d399",
  "--nc-accent-hover": "#86efac",
  "--nc-accent-subtle": "#05966933",
  "--nc-border-default": "#2e6838",
  "--nc-border-focus": "#34d399",
  "--nc-border-interactive": "#509e5e",
  "--nc-content-disabled": "#2e6838",
  "--nc-content-on-accent": "#060f09",
  "--nc-content-on-danger": "#060f09",
  "--nc-content-primary": "#f6fdf7",
  "--nc-content-secondary": "#8dd898",
  "--nc-danger-default": "#f87171",
  "--nc-danger-hover": "#fecaca",
  "--nc-danger-subtle": "#dc262633",
  "--nc-font-family-body": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-heading": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-mono": "'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', Menlo, Consolas, monospace",
  "--nc-font-size-2xl": "2rem",
  "--nc-font-size-lg": "1.25rem",
  "--nc-font-size-md": "1rem",
  "--nc-font-size-sm": "0.875rem",
  "--nc-font-size-xl": "1.563rem",
  "--nc-font-size-xs": "0.75rem",
  "--nc-radius-full": "9999px",
  "--nc-radius-lg": "0.75rem",
  "--nc-radius-md": "0.5rem",
  "--nc-radius-sm": "0.25rem",
  "--nc-shadow-md": "0 4px 6px -1px rgba(0,0,0,0.40), 0 2px 4px -2px rgba(0,0,0,0.40)",
  "--nc-shadow-sm": "0 1px 3px 0 rgba(0,0,0,0.40), 0 1px 2px -1px rgba(0,0,0,0.40)",
  "--nc-space-2xl": "3rem",
  "--nc-space-3xl": "4rem",
  "--nc-space-lg": "1.5rem",
  "--nc-space-md": "1rem",
  "--nc-space-sm": "0.5rem",
  "--nc-space-xl": "2rem",
  "--nc-space-xs": "0.25rem",
  "--nc-success-default": "#4ade80",
  "--nc-success-subtle": "#16a34a33",
  "--nc-surface-background": "#0d1f12",
  "--nc-surface-card": "#1a3d22",
  "--nc-surface-overlay": "rgba(0,0,0,0.60)",
  "--nc-surface-subtle": "#1a3d22",
}
`;

exports[`Token value snapshots – dark mode > palette=ocean dark – token values match snapshot 1`] = `
{
  "--nc-accent-active": "#cffafe",
  "--nc-accent-default": "#22d3ee",
  "--nc-accent-hover": "#67e8f9",
  "--nc-accent-subtle": "#0891b233",
  "--nc-border-default": "#2a6e80",
  "--nc-border-focus": "#22d3ee",
  "--nc-border-interactive": "#4a9db0",
  "--nc-content-disabled": "#2a6e80",
  "--nc-content-on-accent": "#060e11",
  "--nc-content-on-danger": "#060e11",
  "--nc-content-primary": "#f0fdff",
  "--nc-content-secondary": "#7fc8d8",
  "--nc-danger-default": "#f87171",
  "--nc-danger-hover": "#fecaca",
  "--nc-danger-subtle": "#dc262633",
  "--nc-font-family-body": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-heading": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-mono": "'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', Menlo, Consolas, monospace",
  "--nc-font-size-2xl": "2rem",
  "--nc-font-size-lg": "1.25rem",
  "--nc-font-size-md": "1rem",
  "--nc-font-size-sm": "0.875rem",
  "--nc-font-size-xl": "1.563rem",
  "--nc-font-size-xs": "0.75rem",
  "--nc-radius-full": "9999px",
  "--nc-radius-lg": "0.75rem",
  "--nc-radius-md": "0.5rem",
  "--nc-radius-sm": "0.25rem",
  "--nc-shadow-md": "0 4px 6px -1px rgba(0,0,0,0.40), 0 2px 4px -2px rgba(0,0,0,0.40)",
  "--nc-shadow-sm": "0 1px 3px 0 rgba(0,0,0,0.40), 0 1px 2px -1px rgba(0,0,0,0.40)",
  "--nc-space-2xl": "3rem",
  "--nc-space-3xl": "4rem",
  "--nc-space-lg": "1.5rem",
  "--nc-space-md": "1rem",
  "--nc-space-sm": "0.5rem",
  "--nc-space-xl": "2rem",
  "--nc-space-xs": "0.25rem",
  "--nc-success-default": "#4ade80",
  "--nc-success-subtle": "#16a34a33",
  "--nc-surface-background": "#0c1a1f",
  "--nc-surface-card": "#1a4550",
  "--nc-surface-overlay": "rgba(0,0,0,0.60)",
  "--nc-surface-subtle": "#1a4550",
}
`;

exports[`Token value snapshots – dark mode > palette=sunset dark – token values match snapshot 1`] = `
{
  "--nc-accent-active": "#fffbeb",
  "--nc-accent-default": "#fcd34d",
  "--nc-accent-hover": "#fde68a",
  "--nc-accent-subtle": "#d9770633",
  "--nc-border-default": "#8a5a20",
  "--nc-border-focus": "#fcd34d",
  "--nc-border-interactive": "#c08030",
  "--nc-content-disabled": "#8a5a20",
  "--nc-content-on-accent": "#0e0904",
  "--nc-content-on-danger": "#0e0904",
  "--nc-content-primary": "#fffbf0",
  "--nc-content-secondary": "#f0c060",
  "--nc-danger-default": "#f87171",
  "--nc-danger-hover": "#fecaca",
  "--nc-danger-subtle": "#dc262633",
  "--nc-font-family-body": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-heading": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-mono": "'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', Menlo, Consolas, monospace",
  "--nc-font-size-2xl": "2rem",
  "--nc-font-size-lg": "1.25rem",
  "--nc-font-size-md": "1rem",
  "--nc-font-size-sm": "0.875rem",
  "--nc-font-size-xl": "1.563rem",
  "--nc-font-size-xs": "0.75rem",
  "--nc-radius-full": "9999px",
  "--nc-radius-lg": "0.75rem",
  "--nc-radius-md": "0.5rem",
  "--nc-radius-sm": "0.25rem",
  "--nc-shadow-md": "0 4px 6px -1px rgba(0,0,0,0.40), 0 2px 4px -2px rgba(0,0,0,0.40)",
  "--nc-shadow-sm": "0 1px 3px 0 rgba(0,0,0,0.40), 0 1px 2px -1px rgba(0,0,0,0.40)",
  "--nc-space-2xl": "3rem",
  "--nc-space-3xl": "4rem",
  "--nc-space-lg": "1.5rem",
  "--nc-space-md": "1rem",
  "--nc-space-sm": "0.5rem",
  "--nc-space-xl": "2rem",
  "--nc-space-xs": "0.25rem",
  "--nc-success-default": "#4ade80",
  "--nc-success-subtle": "#16a34a33",
  "--nc-surface-background": "#1c1208",
  "--nc-surface-card": "#4a2e10",
  "--nc-surface-overlay": "rgba(0,0,0,0.60)",
  "--nc-surface-subtle": "#4a2e10",
}
`;

exports[`Token value snapshots – light mode > palette=default light – token values match snapshot 1`] = `
{
  "--nc-accent-active": "#3730a3",
  "--nc-accent-default": "#4f46e5",
  "--nc-accent-hover": "#3730a3",
  "--nc-accent-subtle": "#ede9fe",
  "--nc-border-default": "#e2e2f0",
  "--nc-border-focus": "#4f46e5",
  "--nc-border-interactive": "#9898b8",
  "--nc-content-disabled": "#9898b8",
  "--nc-content-on-accent": "#ffffff",
  "--nc-content-on-danger": "#ffffff",
  "--nc-content-primary": "#1a1a2e",
  "--nc-content-secondary": "#6b6b88",
  "--nc-danger-default": "#dc2626",
  "--nc-danger-hover": "#991b1b",
  "--nc-danger-subtle": "#fef2f2",
  "--nc-font-family-body": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-heading": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-mono": "'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', Menlo, Consolas, monospace",
  "--nc-font-size-2xl": "2rem",
  "--nc-font-size-lg": "1.25rem",
  "--nc-font-size-md": "1rem",
  "--nc-font-size-sm": "0.875rem",
  "--nc-font-size-xl": "1.563rem",
  "--nc-font-size-xs": "0.75rem",
  "--nc-radius-full": "9999px",
  "--nc-radius-lg": "0.75rem",
  "--nc-radius-md": "0.5rem",
  "--nc-radius-sm": "0.25rem",
  "--nc-shadow-md": "0 4px 6px -1px rgba(0,0,0,0.10), 0 2px 4px -2px rgba(0,0,0,0.10)",
  "--nc-shadow-sm": "0 1px 3px 0 rgba(0,0,0,0.10), 0 1px 2px -1px rgba(0,0,0,0.10)",
  "--nc-space-2xl": "3rem",
  "--nc-space-3xl": "4rem",
  "--nc-space-lg": "1.5rem",
  "--nc-space-md": "1rem",
  "--nc-space-sm": "0.5rem",
  "--nc-space-xl": "2rem",
  "--nc-space-xs": "0.25rem",
  "--nc-success-default": "#16a34a",
  "--nc-success-subtle": "#f0fdf4",
  "--nc-surface-background": "#f8f8fc",
  "--nc-surface-card": "#ffffff",
  "--nc-surface-overlay": "rgba(0,0,0,0.40)",
  "--nc-surface-subtle": "#f0f0f8",
}
`;

exports[`Token value snapshots – light mode > palette=forest light – token values match snapshot 1`] = `
{
  "--nc-accent-active": "#15803d",
  "--nc-accent-default": "#059669",
  "--nc-accent-hover": "#15803d",
  "--nc-accent-subtle": "#dcfce7",
  "--nc-border-default": "#c2f0c8",
  "--nc-border-focus": "#059669",
  "--nc-border-interactive": "#509e5e",
  "--nc-content-disabled": "#509e5e",
  "--nc-content-on-accent": "#060f09",
  "--nc-content-on-danger": "#ffffff",
  "--nc-content-primary": "#0d1f12",
  "--nc-content-secondary": "#2e6838",
  "--nc-danger-default": "#dc2626",
  "--nc-danger-hover": "#991b1b",
  "--nc-danger-subtle": "#fef2f2",
  "--nc-font-family-body": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-heading": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-mono": "'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', Menlo, Consolas, monospace",
  "--nc-font-size-2xl": "2rem",
  "--nc-font-size-lg": "1.25rem",
  "--nc-font-size-md": "1rem",
  "--nc-font-size-sm": "0.875rem",
  "--nc-font-size-xl": "1.563rem",
  "--nc-font-size-xs": "0.75rem",
  "--nc-radius-full": "9999px",
  "--nc-radius-lg": "0.75rem",
  "--nc-radius-md": "0.5rem",
  "--nc-radius-sm": "0.25rem",
  "--nc-shadow-md": "0 4px 6px -1px rgba(0,0,0,0.10), 0 2px 4px -2px rgba(0,0,0,0.10)",
  "--nc-shadow-sm": "0 1px 3px 0 rgba(0,0,0,0.10), 0 1px 2px -1px rgba(0,0,0,0.10)",
  "--nc-space-2xl": "3rem",
  "--nc-space-3xl": "4rem",
  "--nc-space-lg": "1.5rem",
  "--nc-space-md": "1rem",
  "--nc-space-sm": "0.5rem",
  "--nc-space-xl": "2rem",
  "--nc-space-xs": "0.25rem",
  "--nc-success-default": "#16a34a",
  "--nc-success-subtle": "#f0fdf4",
  "--nc-surface-background": "#f6fdf7",
  "--nc-surface-card": "#ffffff",
  "--nc-surface-overlay": "rgba(0,0,0,0.40)",
  "--nc-surface-subtle": "#e8faea",
}
`;

exports[`Token value snapshots – light mode > palette=ocean light – token values match snapshot 1`] = `
{
  "--nc-accent-active": "#0e7490",
  "--nc-accent-default": "#0891b2",
  "--nc-accent-hover": "#0e7490",
  "--nc-accent-subtle": "#cffafe",
  "--nc-border-default": "#b2e6ef",
  "--nc-border-focus": "#0891b2",
  "--nc-border-interactive": "#4a9db0",
  "--nc-content-disabled": "#4a9db0",
  "--nc-content-on-accent": "#060e11",
  "--nc-content-on-danger": "#ffffff",
  "--nc-content-primary": "#0c1a1f",
  "--nc-content-secondary": "#2a6e80",
  "--nc-danger-default": "#dc2626",
  "--nc-danger-hover": "#991b1b",
  "--nc-danger-subtle": "#fef2f2",
  "--nc-font-family-body": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-heading": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-mono": "'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', Menlo, Consolas, monospace",
  "--nc-font-size-2xl": "2rem",
  "--nc-font-size-lg": "1.25rem",
  "--nc-font-size-md": "1rem",
  "--nc-font-size-sm": "0.875rem",
  "--nc-font-size-xl": "1.563rem",
  "--nc-font-size-xs": "0.75rem",
  "--nc-radius-full": "9999px",
  "--nc-radius-lg": "0.75rem",
  "--nc-radius-md": "0.5rem",
  "--nc-radius-sm": "0.25rem",
  "--nc-shadow-md": "0 4px 6px -1px rgba(0,0,0,0.10), 0 2px 4px -2px rgba(0,0,0,0.10)",
  "--nc-shadow-sm": "0 1px 3px 0 rgba(0,0,0,0.10), 0 1px 2px -1px rgba(0,0,0,0.10)",
  "--nc-space-2xl": "3rem",
  "--nc-space-3xl": "4rem",
  "--nc-space-lg": "1.5rem",
  "--nc-space-md": "1rem",
  "--nc-space-sm": "0.5rem",
  "--nc-space-xl": "2rem",
  "--nc-space-xs": "0.25rem",
  "--nc-success-default": "#16a34a",
  "--nc-success-subtle": "#f0fdf4",
  "--nc-surface-background": "#f0fdff",
  "--nc-surface-card": "#ffffff",
  "--nc-surface-overlay": "rgba(0,0,0,0.40)",
  "--nc-surface-subtle": "#e0f7fb",
}
`;

exports[`Token value snapshots – light mode > palette=sunset light – token values match snapshot 1`] = `
{
  "--nc-accent-active": "#b45309",
  "--nc-accent-default": "#d97706",
  "--nc-accent-hover": "#b45309",
  "--nc-accent-subtle": "#fffbeb",
  "--nc-border-default": "#fde68a",
  "--nc-border-focus": "#d97706",
  "--nc-border-interactive": "#c08030",
  "--nc-content-disabled": "#c08030",
  "--nc-content-on-accent": "#0e0904",
  "--nc-content-on-danger": "#ffffff",
  "--nc-content-primary": "#1c1208",
  "--nc-content-secondary": "#8a5a20",
  "--nc-danger-default": "#dc2626",
  "--nc-danger-hover": "#991b1b",
  "--nc-danger-subtle": "#fef2f2",
  "--nc-font-family-body": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-heading": "system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "--nc-font-family-mono": "'SF Mono', 'Fira Code', 'Fira Mono', 'Roboto Mono', Menlo, Consolas, monospace",
  "--nc-font-size-2xl": "2rem",
  "--nc-font-size-lg": "1.25rem",
  "--nc-font-size-md": "1rem",
  "--nc-font-size-sm": "0.875rem",
  "--nc-font-size-xl": "1.563rem",
  "--nc-font-size-xs": "0.75rem",
  "--nc-radius-full": "9999px",
  "--nc-radius-lg": "0.75rem",
  "--nc-radius-md": "0.5rem",
  "--nc-radius-sm": "0.25rem",
  "--nc-shadow-md": "0 4px 6px -1px rgba(0,0,0,0.10), 0 2px 4px -2px rgba(0,0,0,0.10)",
  "--nc-shadow-sm": "0 1px 3px 0 rgba(0,0,0,0.10), 0 1px 2px -1px rgba(0,0,0,0.10)",
  "--nc-space-2xl": "3rem",
  "--nc-space-3xl": "4rem",
  "--nc-space-lg": "1.5rem",
  "--nc-space-md": "1rem",
  "--nc-space-sm": "0.5rem",
  "--nc-space-xl": "2rem",
  "--nc-space-xs": "0.25rem",
  "--nc-success-default": "#16a34a",
  "--nc-success-subtle": "#f0fdf4",
  "--nc-surface-background": "#fffbf0",
  "--nc-surface-card": "#ffffff",
  "--nc-surface-overlay": "rgba(0,0,0,0.40)",
  "--nc-surface-subtle": "#fef3c7",
}
`;
